Agregando estilos al proyecto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Darwing González">
         <meta name="robots" content="noindex">
         <link rel="icon" href="lorem-ipsum.ico">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <center>
